[package]
name = "parstream"
version = "0.1.0"
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Compute function over iterator in a streaming fashion using thread pool and preserving order of elements."
documentation = "https://docs.rs/parstream"
repository = "https://github.com/newpavlov/parstream"

[dependencies]
crossbeam-channel = "0.3"
crossbeam-utils = "0.6"
