[package]
name = "parstream"
version = "0.2.1"
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Crate for computing function over iterator in a streaming fashion using multi-threading while preserving order."
documentation = "https://docs.rs/parstream"
repository = "https://github.com/newpavlov/parstream"

[dependencies]
crossbeam-channel = "0.3"
crossbeam-utils = "0.6"
